--- a/WeiXinLib/WeiXinLib.csproj
+++ b/WeiXinLib/WeiXinLib.csproj
@@ -31,9 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,9 +44,8 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WebApiClient.JIT, Version=0.1.1.0, Culture=neutral, PublicKeyToken=96ac13f3a45093d9, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\WebApiClient.JIT.0.1.1\lib\net45\WebApiClient.JIT.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="WebApiClient.JIT">
+      <HintPath>..\packages\WebApiClient.JIT.0.1.1\lib\net45\WebApiClient.JIT.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
